--- a/css/styles.css
+++ b/css/styles.css
@@ -99,7 +99,7 @@ body {
   line-height: var(--bs-body-line-height);
   color: var(--bs-body-color);
   text-align: var(--bs-body-text-align);
-  background-color: var(--bs-body-bg);
+  background-color: rgb(174, 64, 64);
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
@@ -3730,7 +3730,7 @@ textarea.form-control-lg {
   --bs-navbar-padding-y: 0.5rem;
   --bs-navbar-color: rgba(0, 0, 0, 0.55);
   --bs-navbar-hover-color: rgba(0, 0, 0, 0.7);
-  --bs-navbar-disabled-color: rgba(0, 0, 0, 0.3);
+  --bs-navbar-disabled-color: rgba(19, 2, 2, 0.3);
   --bs-navbar-active-color: rgba(0, 0, 0, 0.9);
   --bs-navbar-brand-padding-y: 0.3125rem;
   --bs-navbar-brand-margin-end: 1rem;
@@ -5793,7 +5793,7 @@ textarea.form-control-lg {
 
 .carousel-inner {
   position: relative;
-  width: 100%;
+  width: auto;
   overflow: hidden;
 }
 .carousel-inner::after {
@@ -8447,6 +8447,7 @@ textarea.form-control-lg {
 .invisible {
   visibility: hidden !important;
 }
+
 
 @media (min-width: 576px) {
   .float-sm-start {
