--- a/css/styles.css
+++ b/css/styles.css
@@ -13536,3 +13536,23 @@ fieldset:disabled .btn {
   text-align: center;
   margin-bottom: 2em;
 }
+
+.map-image img {
+  width: 80%;
+}
+
+@media (max-width: 768px) {
+  .map-image img {
+    max-width: 768px;
+    height: 600px;
+    width: 500px;
+  }
+}
+
+@media (max-width: 480px) {
+  .map-image img {
+    max-width: 100%;
+    height: 300px;
+    width: 200px;
+  }
+}
