--- a/css/styles.css
+++ b/css/styles.css
@@ -4150,6 +4150,7 @@ fieldset:disabled .btn {
   color: var(--bs-nav-link-color);
   text-decoration: none;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
+
 }
 
 @media (prefers-reduced-motion: reduce) {
@@ -4161,12 +4162,14 @@ fieldset:disabled .btn {
 .nav-link:hover,
 .nav-link:focus {
   color: var(--bs-nav-link-hover-color);
+
 }
 
 .nav-link.disabled {
   color: var(--bs-nav-link-disabled-color);
   pointer-events: none;
   cursor: default;
+;
 }
 
 .nav-tabs {
@@ -4178,6 +4181,7 @@ fieldset:disabled .btn {
   --bs-nav-tabs-link-active-bg: #fff;
   --bs-nav-tabs-link-active-border-color: #dee2e6 #dee2e6 #fff;
   border-bottom: var(--bs-nav-tabs-border-width) solid var(--bs-nav-tabs-border-color);
+  
 }
 
 .nav-tabs .nav-link {
@@ -4186,6 +4190,7 @@ fieldset:disabled .btn {
   border: var(--bs-nav-tabs-border-width) solid transparent;
   border-top-left-radius: var(--bs-nav-tabs-border-radius);
   border-top-right-radius: var(--bs-nav-tabs-border-radius);
+  background-color: grey;
 }
 
 .nav-tabs .nav-link:hover,
@@ -4212,12 +4217,13 @@ fieldset:disabled .btn {
   margin-top: calc(-1 * var(--bs-nav-tabs-border-width));
   border-top-left-radius: 0;
   border-top-right-radius: 0;
+
 }
 
 .nav-pills {
   --bs-nav-pills-border-radius: 0.375rem;
   --bs-nav-pills-link-active-color: #fff;
-  --bs-nav-pills-link-active-bg: #0d6efd;
+  --bs-nav-pills-link-active-bg: hsl(216, 99%, 59%);
 }
 
 .nav-pills .nav-link {
@@ -4263,6 +4269,14 @@ fieldset:disabled .btn {
 .tab-content>.active {
   display: block;
 }
+.nav-link{
+  color: white;
+}
+.nav-link:hover{
+  color: rgb(153, 150, 150);
+}
+
+
 
 .navbar {
   --bs-navbar-padding-x: 0;
@@ -4304,6 +4318,7 @@ fieldset:disabled .btn {
   flex-wrap: inherit;
   align-items: center;
   justify-content: space-between;
+ 
 }
 
 .navbar-brand {
@@ -4314,11 +4329,13 @@ fieldset:disabled .btn {
   color: var(--bs-navbar-brand-color);
   text-decoration: none;
   white-space: nowrap;
+  
 }
 
 .navbar-brand:hover,
 .navbar-brand:focus {
   color: var(--bs-navbar-brand-hover-color);
+  
 }
 
 .navbar-nav {
@@ -4333,15 +4350,18 @@ fieldset:disabled .btn {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
+  
 }
 
 .navbar-nav .show>.nav-link,
 .navbar-nav .nav-link.active {
   color: var(--bs-navbar-active-color);
+  
 }
 
 .navbar-nav .dropdown-menu {
   position: static;
+  
 }
 
 .navbar-text {
@@ -4354,12 +4374,14 @@ fieldset:disabled .btn {
 .navbar-text a:hover,
 .navbar-text a:focus {
   color: var(--bs-navbar-active-color);
+  
 }
 
 .navbar-collapse {
   flex-basis: 100%;
   flex-grow: 1;
   align-items: center;
+  
 }
 
 .navbar-toggler {
@@ -4367,7 +4389,7 @@ fieldset:disabled .btn {
   font-size: var(--bs-navbar-toggler-font-size);
   line-height: 1;
   color: var(--bs-navbar-color);
-  background-color: transparent;
+  background-color: #AE4040;
   border: var(--bs-border-width) solid var(--bs-navbar-toggler-border-color);
   border-radius: var(--bs-navbar-toggler-border-radius);
   transition: var(--bs-navbar-toggler-transition);
@@ -13540,7 +13562,9 @@ fieldset:disabled .btn {
 .map-image img {
   width: 80%;
 }
-
+footer{
+  background-color: #0a58ca;
+}
 @media (max-width: 768px) {
   .map-image img {
     max-width: 768px;
